--- a/angular/src/app/modules/login/form/login-form.component.scss
+++ b/angular/src/app/modules/login/form/login-form.component.scss
@@ -1,21 +1,11 @@
-@import "src/assets/scss/variables";
+@import 'src/assets/scss/variables';
 
 :host {
-  background: main-pallete(300);
   height: 100%;
-
-  .app-header {
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-      0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-  }
+  
   .login-wrapper {
     height: 100%;
+    background: main-palette(300);
   }
   .positronx {
     text-decoration: none;
@@ -42,20 +32,6 @@
     -ms-transform: scale(0.95);
     top: -20px;
     opacity: 0.8;
-    z-index: -1;
-  }
-  .box:before {
-    content: "";
-    width: 100%;
-    height: 30px;
-    border-radius: 10px;
-    position: absolute;
-    top: -10px;
-    background: rgba(255, 255, 255, 0.6);
-    left: 0;
-    transform: scale(0.95);
-    -webkit-transform: scale(0.95);
-    -ms-transform: scale(0.95);
     z-index: -1;
   }
   .login-wrapper .example-form {
@@ -94,8 +70,8 @@
       width: 100%;
     }
     .additional-info {
-      // margin: $module-rem * 2 (-($module-rem * 2)) (-($module-rem * 2));
-      padding: $module-rem $module-rem * 2;
+      // top & bottom module-rem, left & right 0
+      padding: $module-rem 0;
 
       .divider {
         border-left: 1px solid rgba(#000, 0.2);
