--- a/angular/src/app/modules/login/sign-up/sign-up.component.html
+++ b/angular/src/app/modules/login/sign-up/sign-up.component.html
@@ -3,27 +3,74 @@
     <mat-card-header>
       <mat-card-title>Register</mat-card-title>
     </mat-card-header>
-    <form class="example-form">
+    <form
+      [formGroup]="signUpForm"
+      (ngSubmit)="doRegister()"
+      class="example-form"
+    >
       <mat-card-content>
         <mat-form-field class="full-width">
-          <input matInput placeholder="Username">
+          <input
+            matInput
+            placeholder="First Name"
+            formControlName="firstName"
+          />
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input matInput placeholder="Email">
+          <input matInput placeholder="Last Name" formControlName="lastName" />
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input matInput placeholder="Password">
+          <input matInput placeholder="Email" formControlName="email" />
+          <mat-error *ngIf="f['email'].errors">
+            <div *ngIf="f['email'].errors['required']">Email is required</div>
+            <div *ngIf="f['email'].errors['email']">Email must be valid</div>
+          </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input matInput placeholder="Confim Password">
+          <input
+            matInput
+            type="password"
+            placeholder="Password"
+            formControlName="password"
+          />
+          <mat-error *ngIf="f['password'].errors">
+            <div *ngIf="f['password'].errors['required']">
+              Password is required
+            </div>
+            <div *ngIf="f['password'].errors['minlength']">
+              Password must be at least
+              {{ f["password"].errors["minlength"].requiredLength }}
+              characters long
+            </div>
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input
+            matInput
+            type="password"
+            placeholder="Confim Password"
+            formControlName="confirmPassword"
+          />
+          <mat-error *ngIf="f['confirmPassword'].errors">
+            <div *ngIf="f['confirmPassword'].errors['required']">
+              Confirm password is required
+            </div>
+            <div *ngIf="f['confirmPassword'].errors['mustMatch']">
+              Passwords must match
+            </div>
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
-      <button mat-raised-button color="primary" class="btn-block">Register</button>
-        <div class="additional-info" fxLayout="row" fxLayoutAlign="space-between">
-          <a href="#" [routerLink]="['../', 'form']">Login</a>
-          <span class="divider"></span>
-          <a href="#" [routerLink]="['/login', 'request-reset-password']">Recuperar Contraseña</a>
-        </div>
+      <button mat-raised-button color="primary" class="btn-block">
+        Register
+      </button>
+      <div class="additional-info" fxLayout="row" fxLayoutAlign="space-between">
+        <a href="#" [routerLink]="['../', 'form']">Login</a>
+        <span class="divider"></span>
+        <a href="#" [routerLink]="['/login', 'request-reset-password']"
+          >Recuperar Contraseña</a
+        >
+      </div>
     </form>
   </mat-card>
 </div>
