--- a/angular/src/app/modules/myapp/myapp.component.html
+++ b/angular/src/app/modules/myapp/myapp.component.html
@@ -1,11 +1,4 @@
-<!-- Toolbar -->
-<mat-toolbar color="primary" class="app-header">
-  <div><a href="https://www.positronx.io" target="_blank" class="app-link">MyApp</a></div>
-  <span class="nav-tool-items">
-    <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
-    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
-  </span>
-</mat-toolbar>
+<app-top-bar></app-top-bar>
 <main class="main-content">
 
   <router-outlet></router-outlet>
