Reformat LoginForm BackendErrors

--- a/angular/src/app/modules/login/form/login-form.component.scss
+++ b/angular/src/app/modules/login/form/login-form.component.scss
@@ -19,7 +19,7 @@
     padding: 60px 50px 40px 50px;
     width: 100%;
     background: #fff;
-    border-radius: 10px;
+    border-radius: $shape;
     transform: scale(1);
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
