--- a/angular/src/app/modules/login/request-reset-password/request-reset-password.component.html
+++ b/angular/src/app/modules/login/request-reset-password/request-reset-password.component.html
@@ -1,1 +1,43 @@
-<p>request-reset-password works!</p>
+<div class="request-wrapper" fxLayout="row" fxLayoutAlign="center center">
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Request reset password</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="form" class="example-form">
+        <app-backend-error-messages
+          *ngIf="backendErrors$ | async"
+          [backendErrors]="backendErrors$ | async"
+        ></app-backend-error-messages>
+        <mat-form-field class="full-width">
+          <input
+            matInput
+            type="text"
+            placeholder="Email"
+            formControlName="email"
+            required
+          />
+          <mat-error> Please provide a valid email address </mat-error>
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="doRequestResetPassword()"
+          [disabled]="isSubmitting$ | async"
+        >
+          Send
+        </button>
+        <div
+          class="additional-info"
+          fxLayout="row"
+          fxLayoutAlign="space-between"
+        >
+          <a href="#" [routerLink]="['../', 'form']">Login</a>
+          <span class="divider"></span>
+          <a href="#" [routerLink]="['../', 'sign-up']">Nuevo Registro</a>
+
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
