--- a/angular/src/app/modules/login/reset-password/reset-password.component.html
+++ b/angular/src/app/modules/login/reset-password/reset-password.component.html
@@ -1,1 +1,55 @@
-<p>reset-password works!</p>
+<div class="reset-wrapper" fxLayout="row" fxLayoutAlign="center center">
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Log in</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="form" class="example-form">
+        <app-backend-error-messages
+          *ngIf="backendErrors$ | async"
+          [backendErrors]="backendErrors$ | async"
+        ></app-backend-error-messages>
+        <mat-form-field class="full-width">
+          <input
+            matInput
+            type="text"
+            placeholder="Email"
+            formControlName="email"
+            required
+          />
+          <mat-error> Please provide a valid email address </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input
+            matInput
+            type="password"
+            placeholder="Password"
+            formControlName="password"
+            name="password"
+            required
+          />
+          <mat-error> Please provide a valid password </mat-error>
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="doRequestResetPassword()"
+          [disabled]="isSubmitting$ | async"
+        >
+          Login
+        </button>
+        <div
+          class="additional-info"
+          fxLayout="row"
+          fxLayoutAlign="space-between"
+        >
+          <a href="#" [routerLink]="['../', 'sign-up']">Nuevo Registro</a>
+          <span class="divider"></span>
+          <a href="#" [routerLink]="['/login', 'request-reset-password']"
+            >Recuperar Contraseña</a
+          >
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
