--- a/angular/src/app/modules/login/form/login-form.component.html
+++ b/angular/src/app/modules/login/form/login-form.component.html
@@ -1,53 +1,27 @@
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-  <mat-card class="box">
+<div class="login-wrapper">
+  <mat-card appearance="outlined" class="box">
     <mat-card-header>
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="loginForm" class="example-form">
-        <app-backend-error-messages
-          *ngIf="backendErrors$ | async"
-          [backendErrors]="backendErrors$ | async"
-        ></app-backend-error-messages>
+        <app-backend-error-messages *ngIf="backendErrors$ | async"
+          [backendErrors]="backendErrors$ | async"></app-backend-error-messages>
         <mat-form-field class="full-width">
-          <input
-            matInput
-            type="text"
-            placeholder="Email"
-            formControlName="email"
-            required
-          />
+          <input matInput type="text" placeholder="Email" formControlName="email" required />
           <mat-error> Please provide a valid email address </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width">
-          <input
-            matInput
-            type="password"
-            placeholder="Password"
-            formControlName="password"
-            name="password"
-            required
-          />
+          <input matInput type="password" placeholder="Password" formControlName="password" name="password" required />
           <mat-error> Please provide a valid password </mat-error>
         </mat-form-field>
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="doLogin()"
-          [disabled]="isSubmitting$ | async"
-        >
+        <button mat-raised-button color="primary" (click)="doLogin()" [disabled]="isSubmitting$ | async">
           Login
         </button>
-        <div
-          class="additional-info"
-          fxLayout="row"
-          fxLayoutAlign="space-between"
-        >
+        <div class="additional-info">
           <a href="#" [routerLink]="['../', 'sign-up']">Nuevo Registro</a>
           <span class="divider"></span>
-          <a href="#" [routerLink]="['/login', 'request-reset-password']"
-            >Recuperar Contraseña</a
-          >
+          <a href="#" [routerLink]="['/login', 'request-reset-password']">Recuperar Contraseña</a>
         </div>
       </form>
     </mat-card-content>
