--- a/angular/src/app/modules/login/reset-password/reset-password.component.html
+++ b/angular/src/app/modules/login/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <div class="reset-wrapper" fxLayout="row" fxLayoutAlign="center center">
-  <mat-card class="box">
+  <mat-card appearance="outlined" class="box">
     <mat-card-header>
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
