Adding updated Material v17

--- a/angular/src/app/modules/login/form/login-form.component.html
+++ b/angular/src/app/modules/login/form/login-form.component.html
@@ -1,5 +1,6 @@
 <div class="login-wrapper">
   <mat-card appearance="outlined" class="box">
+    <mat-progress-bar *ngIf="isSubmitting$ | async" mode="indeterminate"></mat-progress-bar>
     <mat-card-header>
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
