--- a/angular/src/app/modules/login/request-reset-password/request-reset-password.component.scss
+++ b/angular/src/app/modules/login/request-reset-password/request-reset-password.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/scss/variables';
+@import 'variables';
 
 :host {
   height: 100%;
@@ -10,10 +10,12 @@
     justify-content: center;
     align-items: center;
   }
+
   .positronx {
     text-decoration: none;
     color: #ffffff;
   }
+
   .box {
     position: relative;
     top: 0;
@@ -29,6 +31,7 @@
     z-index: 5;
     max-width: 430px;
   }
+
   .box.back {
     transform: scale(0.95);
     -webkit-transform: scale(0.95);
@@ -37,33 +40,40 @@
     opacity: 0.8;
     z-index: -1;
   }
+
   .request-wrapper .example-form {
     min-width: 100%;
     max-width: 300px;
     width: 100%;
   }
+
   .request-wrapper .full-width,
   .request-wrapper .btn-block {
     width: 100%;
   }
+
   .request-wrapper mat-card-header {
     text-align: center;
     width: 100%;
     display: block;
     font-weight: 700;
   }
+
   .request-wrapper mat-card-header mat-card-title {
     font-size: 30px;
     margin: 0;
   }
+
   .request-wrapper .mat-mdc-card {
     padding: 30px 60px 40px;
   }
+
   .request-wrapper .mat-mdc-outlined-button {
     border: 1px solid currentColor;
     line-height: 54px;
     background: #fff7fa;
   }
+
   /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   .request-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
     padding: 0.8375em 0;
@@ -73,6 +83,7 @@
     button {
       width: 100%;
     }
+
     .additional-info {
       // top & bottom module-rem, left & right 0
       padding: $module-rem 0;
