--- a/angular/src/app/shared/modules/alert/alert.component.scss
+++ b/angular/src/app/shared/modules/alert/alert.component.scss
@@ -1,4 +1,4 @@
-@import "src/assets/scss/variables";
+@import "variables";
 
 $_module-rem: $module-rem;
 $_border-width: 1px;
@@ -6,33 +6,27 @@ $_shape: $shape;
 $_animation: $animation;
 
 $_types: (
-  default: (
-    bg: main-palette(500),
+  default: (bg: main-palette(500),
     color: main-palette-contrast(500),
     border-color: main-palette(500),
   ),
-  accent: (
-    bg: accent-palette(500),
+  accent: (bg: accent-palette(500),
     color: accent-palette-contrast(500),
     border-color: accent-palette(500),
   ),
-  success: (
-    bg: $success-color,
+  success: (bg: $success-color,
     color: $success-contrast,
     border-color: $success-color,
   ),
-  info: (
-    bg: $info-color,
+  info: (bg: $info-color,
     color: $info-contrast,
     border-color: $info-color,
   ),
-  warning: (
-    bg: $warning-color,
+  warning: (bg: $warning-color,
     color: $warning-contrast,
     border-color: $warning-color,
   ),
-  error: (
-    bg: $error-color,
+  error: (bg: $error-color,
     color: $error-contrast,
     border-color: $error-color,
   ),
@@ -57,6 +51,7 @@ $_types: (
       margin-bottom: $_module-rem * 0.5;
     }
   }
+
   .close {
     background: rgba(#000, 0.1);
     color: inherit;
@@ -73,10 +68,12 @@ $_types: (
       left: 0;
       right: auto;
     }
+
     &:hover {
       background: rgba(#fff, 0.3);
       color: #f00;
     }
+
     .material-icons {
       color: inherit;
       font-size: inherit;
@@ -84,6 +81,7 @@ $_types: (
       vertical-align: top;
     }
   }
+
   .alert-icon {
     align-items: center;
     background: rgba(#fff, 0.2);
@@ -91,44 +89,50 @@ $_types: (
     font-size: 1.43em;
     line-height: 1;
     min-height: 100%;
-    padding: $_module-rem ($_module-rem * 1.5);
-  }
-  @each $_type, $_color in $_types {
-    &.alert-#{$_type} {
-      background: map-get($_color, bg);
-      color: map-get($_color, color);
-      border-color: map-get($map: $_color, $key: border-color);
-      margin: 14px 0;
+    padding: $_module-rem (
+      $_module-rem * 1.5
+    );
+}
 
-      &.outline {
-        background: transparent;
-        color: map-get($_color, bg);
-      }
+@each $_type, $_color in $_types {
+  &.alert-#{$_type} {
+    background: map-get($_color, bg);
+    color: map-get($_color, color);
+    border-color: map-get($map: $_color, $key: border-color);
+    margin: 14px 0;
+
+    &.outline {
+      background: transparent;
+      color: map-get($_color, bg);
     }
   }
-  &.with-before-icon {
-    padding-left: 0;
+}
 
-    .rtl & {
-      padding-left: $_module-rem;
+&.with-before-icon {
+  padding-left: 0;
+
+  .rtl & {
+    padding-left: $_module-rem;
+    padding-right: 0;
+  }
+}
+
+&.with-after-icon {
+  padding-right: 0;
+
+  .rtl & {
+    padding-left: 0;
+    padding-right: $_module-rem;
+
+    &.with-before-icon {
       padding-right: 0;
     }
   }
-  &.with-after-icon {
-    padding-right: 0;
+}
 
-    .rtl & {
-      padding-left: 0;
-      padding-right: $_module-rem;
-
-      &.with-before-icon {
-        padding-right: 0;
-      }
-    }
+&:hover {
+  .close {
+    opacity: 1;
   }
-  &:hover {
-    .close {
-      opacity: 1;
-    }
-  }
+}
 }
