--- a/angular/src/app/modules/login/sign-up/sign-up.component.scss
+++ b/angular/src/app/modules/login/sign-up/sign-up.component.scss
@@ -54,7 +54,6 @@
 
   .login-wrapper mat-card-header {
     text-align: center;
-    width: 100%;
     display: block;
     font-weight: 700;
   }
@@ -65,7 +64,7 @@
   }
 
   .login-wrapper .mat-mdc-card {
-    padding: 30px 60px 40px;
+    padding: 14px 21px 21px;
   }
 
   .login-wrapper .mat-mdc-outlined-button {
@@ -87,7 +86,10 @@
     .additional-info {
       // top & bottom module-rem, left & right 0
       padding: $module-rem 0;
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
       .divider {
         border-left: 1px solid rgba(#000, 0.2);
         display: inline-block;
